# AOC

./: CMakeLists.txt  aoc_2015.sln
aoc_2015/: aoc_2015.vcxproj  aoc_2015.vcxproj.filters  days.hpp  main.cpp
aoc_2015/Helper/: convert.cpp  convert.hpp  input.cpp  input.hpp  load.cpp  load.hpp  print.cpp  print.hpp  string.cpp  string.hpp  types.hpp
aoc_2015/day_01/: day_01.cpp  day_01.hpp
aoc_2015/day_02/: day_02.cpp  day_02.hpp
aoc_2015/day_03/: day_03.cpp  day_03.hpp
src/: CMakeLists.txt  days.hpp  main.cpp  years.cpp  years.hpp
src/2015/: CMakeLists.txt  days_15.hpp
src/2015/day_15_01/: day_15_01.cpp  day_15_01.hpp
src/2015/day_15_02/: day_15_02.cpp  day_15_02.hpp
src/2015/day_15_03/: day_15_03.cpp  day_15_03.hpp
src/2023/: CMakeLists.txt  days_23.hpp
src/2023/day_23_01/: day_23_01.cpp  day_23_01.hpp
src/2023/day_23_02/: day_23_02.cpp  day_23_02.hpp
src/2023/day_23_03/: day_23_03.cpp  day_23_03.hpp
src/2023/day_23_04/: day_23_04.cpp  day_23_04.hpp
src/2023/day_23_05/: day_23_05.cpp  day_23_05.hpp
src/2023/day_23_06/: day_23_06.cpp  day_23_06.hpp
src/2023/day_23_07/: day_23_07.cpp  day_23_07.hpp
src/helper/: CMakeLists.txt  compare.cpp  compare.hpp  concepts.hpp  convert.cpp  convert.hpp  input.cpp  input.hpp  load.cpp  load.hpp  print.cpp  print.hpp  string.cpp  string.hpp  types.hpp
